--- a/example.yaml
+++ b/example.yaml
@@ -1,7 +1,5 @@
 - symbol: '600000.SH'
   runners: 
-    - name: 'MinMax'
-      param: 
-        Min: 11.00
-        Max: 23.00
-        Cost: 12.00
+  - name: "MinMax"
+    param: 
+      min: 0.0
